--- a/Presentation/ETicaretApi.Api/appsettings.json
+++ b/Presentation/ETicaretApi.Api/appsettings.json
@@ -14,5 +14,19 @@
     "AWS": "",
     "Google": ""
   },
-  "BaseStorageUrl": "https://nurlanminieticaret.blob.core.windows.net"
+  "BaseStorageUrl": "https://nurlanminieticaret.blob.core.windows.net",
+  "Token": {
+    "Audience": "www.google.com",
+    "Issuer": "www.nurlan.com",
+    "SecurityKey": "bir derdim var..."
+  },
+  "ExternalLoginSettings": {
+    "Facebook": {
+      "Client_ID": "595001465957694",
+      "Client_Secret": "657c5e925a4e8d5879d078cef920b053"
+    },
+    "Google": {
+      "Client_ID": "744749868796-po6282ifpiuprvoqs74d5qltnoj932ko.apps.googleusercontent.com"
+    }
+  } 
 }
