Serilog and global exception handler

--- a/Presentation/ETicaretApi.Api/appsettings.json
+++ b/Presentation/ETicaretApi.Api/appsettings.json
@@ -28,5 +28,8 @@
     "Google": {
       "Client_ID": "744749868796-po6282ifpiuprvoqs74d5qltnoj932ko.apps.googleusercontent.com"
     }
-  } 
+  },
+  "Seq": {
+    "ServerURL": "http://localhost:5341/"
+  }
 }
