--- a/Presentation/ETicaretApi.Api/ETicaretApi.Api.csproj
+++ b/Presentation/ETicaretApi.Api/ETicaretApi.Api.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\Core\ETicaretApi.Application\ETicaretApi.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ETicaretApi.Infrastructure\ETicaretApi.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\ETicaretApi.Persistence\ETicaretApi.Persistence.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\ETicaretApi.SignalR\ETicaretApi.SignalR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
